add create term and term detail files

--- a/template/libary_details.html
+++ b/template/libary_details.html
@@ -23,7 +23,7 @@
 
 <body>
     <div class="pb-5">
-        <div class="container-md">
+        <div class="container-lg">
             <div class="row">
                 <div class="col-3 d-flex mt-4">
                     <img width="64" height="64" class="rounded-pill me-3"
@@ -53,7 +53,7 @@
             <div class="tab-content">
                 <div id="hoc_phan" class="tab-pane fade show active">
                     <div class="row">
-                        <div class="col-lg-9 mt-5">
+                        <div class="col-md-12 col-lg-10 mt-5">
                             <div class="row">
                                 <div class="d-flex justify-content-between">
                                     <div class="dropdown col-2">
@@ -198,7 +198,7 @@
 
                 <div id="thu_muc" class="tab-pane fade">
                     <div class="row">
-                        <div class="col-lg-9 mt-5">
+                        <div class="col-md-12 col-lg-10 mt-5">
                             <div class="row">
                                 <div class="dropdown">
                                     <button class="btn btn-outline-secondary dropdown-toggle bg-white text-dark"
@@ -245,7 +245,7 @@
 
                 <div id="lop_hoc" class="tab-pane fade">
                     <div class="row">
-                        <div class="col-sm-12 col-lg-9 mt-5">
+                        <div class="col-md-12 col-lg-10 mt-5">
                             <div>
                                 <div class="row mb-2 g-0">
                                     <div class="shadow-sm p-3 bg-white rounded">
