--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,52 +1,64 @@
-*{
+* {
     font-family: Arial;
     /*background-color: rgba(99, 197, 222, 0.07);*/
 }
-body{
+
+body {
     background-color: #16b5de05;
 }
-.row{
+
+.row {
     margin-bottom: 20px;
 }
-.header-title-page{
+
+.header-title-page {
     width: 100%;
 }
-.btn-import, .btn-edit-display{
+
+.btn-import, .btn-edit-display {
     border: none;
     color: #63C5DE;
     background-color: white;
     cursor: pointer;
     font-weight: 400;
 }
-.btn-import:hover, .btn-edit-display:hover{
+
+.btn-import:hover, .btn-edit-display:hover {
     color: #ffcd1f;
 }
-.CreateSetHeader-headingContent{
+
+.CreateSetHeader-headingContent {
     margin-top: 50px;
 }
-.CreateSetHeader-PermissionAndImport{
+
+.CreateSetHeader-PermissionAndImport {
     margin-top: 50px;
 }
-.titleContent{
+
+.titleContent {
     width: 50%;
     margin-bottom: 20px;
 }
-#title-term{
-    border:none;
+
+#title-term {
+    border: none;
     border-bottom: 0.125rem solid #000;
     width: 100%;
     overflow: hidden;
     background: transparent;
     outline: none;
 }
-#title-term:hover{
+
+#title-term:hover {
     border-bottom: 0.125rem solid #ffcd1f;
 }
-.descriptionContent{
+
+.descriptionContent {
     width: 50%;
 }
-#description-term{
-    border:none;
+
+#description-term {
+    border: none;
     border-bottom: 0.125rem solid #000;
     width: 100%;
     overflow: hidden;
@@ -54,18 +66,22 @@ body{
     outline: none;
     resize: none;
 }
-#description-term:hover{
+
+#description-term:hover {
     border-bottom: 0.125rem solid #ffcd1f;
 }
+
 .UIFloatedCard {
     width: 100%;
     height: 100%;
     position: relative;
     z-index: 2;
 }
+
 .UIFloatedCard--white {
     background: white;
 }
+
 .UIFileChooser-form, .UIFileChooser-input {
     font-size: 0;
     height: 0;
@@ -74,14 +90,17 @@ body{
     pointer-events: none;
     width: 0;
 }
+
 .UIFileChooser-contents {
     display: block;
 }
+
 @media screen and (max-width: 64em) {
     .CreateSetDiagramUploader-banner {
         padding: 2rem;
     }
 }
+
 .CreateSetDiagramUploader-banner {
     align-items: center;
     border: 0.125rem dashed #d9dde8;
@@ -105,12 +124,14 @@ body{
     transform: rotate(-20deg);
     width: 5.5625rem;
 }
+
 .CreateSetDiagramUploader-bannerText {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
     text-align: center;
 }
+
 .UIHeading {
     margin-bottom: 0;
     margin-left: 0;
@@ -122,11 +143,13 @@ body{
     font-weight: 700;
     line-height: 1.2;
 }
+
 .UIParagraph {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.625;
 }
+
 .UIParagraph .UILink {
     font-size: 1rem;
     font-weight: 400;
@@ -141,12 +164,14 @@ body{
 .TermRows-termRowWrap {
     counter-increment: studiable-item;
 }
+
 .TermRow {
     align-items: flex-start;
     counter-increment: term-row;
     display: flex;
     width: 100%;
 }
+
 .TermRow-bareSide--word {
     padding-right: 4.1875rem;
     width: 50%;
@@ -158,6 +183,7 @@ body{
     white-space: pre-wrap;
     word-break: break-word;
 }
+
 .TermRow-bareSide--definition {
     padding-left: 1.25rem;
     padding-right: 7.375rem;
@@ -170,9 +196,11 @@ body{
     white-space: pre-wrap;
     word-break: break-word;
 }
+
 .TermContent.rt-clean-design .StudiableItemToolbar-counter {
     width: 2.5rem;
 }
+
 .StudiableItemToolbar-counter {
     color: black;
     font-size: 1rem;
@@ -180,20 +208,24 @@ body{
     letter-spacing: .0875rem;
     line-height: 1.5;
 }
+
 .TermContent-inner {
     background-color: white;
     border-radius: 0.5rem;
     cursor: move;
     position: relative;
 }
+
 .TermContent.rt-clean-design .StudiableItemToolbar {
     margin-bottom: 0;
     margin-top: 0;
     padding: 0.75rem;
 }
+
 .TermContent.rt-clean-design .StudiableItemToolbar-counter {
     width: 2.5rem;
 }
+
 .StudiableItemToolbar {
     align-items: center;
     border-bottom: 2px solid rgba(147, 155, 180, 0.19);
@@ -210,6 +242,7 @@ body{
     letter-spacing: .0875rem;
     line-height: 1.5;
 }
+
 .StudiableItemToolbar-counter, .StudiableItemToolbar-dragToggle {
     display: flex;
     flex: 0 1 auto;
@@ -220,6 +253,7 @@ body{
     user-select: none;
     width: 4rem;
 }
+
 .StudiableItemToolbar-editableToggles {
     align-items: center;
     cursor: default;
@@ -228,26 +262,32 @@ body{
     justify-content: center;
     transform: translateY(0.125rem);
 }
+
 .TermContent.rt-clean-design .StudiableItemToolbar-actionableToggles {
     overflow-x: hidden;
     width: 2.5rem;
 }
+
 .StudiableItemToolbar-actionableToggles {
     display: flex;
     justify-content: center;
     margin-left: 0.75rem;
     width: 4rem;
 }
+
 .ContextToggle {
     display: inline-block;
     vertical-align: bottom;
 }
+
 .TermContent.rt-clean-design .TermContent-inner-padding {
     padding-left: 0.75rem;
 }
+
 .TermContent-inner-padding {
     padding: 0.75rem 0.75rem 1.5rem 4.625rem;
 }
+
 .TermContent-sideWrap {
     display: table;
     min-height: 3.375rem;
@@ -256,11 +296,13 @@ body{
     transition-property: background;
     width: 100%;
 }
+
 .TermContent-side--word {
     padding-left: 0.75rem;
     padding-right: 1.25rem;
     width: 50%;
 }
+
 .TermContent-side {
     cursor: text;
     display: table-cell;
@@ -270,12 +312,15 @@ body{
     word-break: break-word;
     z-index: 1;
 }
+
 .WordSide {
     position: relative;
 }
+
 .PMEditor {
     cursor: text;
 }
+
 .ProseMirror[contenteditable] {
     word-wrap: break-word;
     overflow-wrap: break-word;
@@ -285,15 +330,18 @@ body{
     user-select: text;
     white-space: pre-wrap;
 }
+
 .ProseMirror, .ProseMirror-focused {
     box-shadow: none;
     outline: none;
 }
+
 .PMEditor-border {
     box-shadow: 0 0.125rem 0 0 #000;
     height: 0.25rem;
-    transition: all .12s cubic-bezier(.47,0,.745,.715);
+    transition: all .12s cubic-bezier(.47, 0, .745, .715);
 }
+
 .RichTextEditor-label {
     color: #939bb4;
     display: grid;
@@ -310,11 +358,13 @@ body{
     -ms-user-select: none;
     user-select: none;
 }
+
 .TermContent-side--definition {
     padding-left: 1.25rem;
     padding-right: 0.75rem;
     width: 50%;
 }
+
 .TermContent-side {
     cursor: text;
     display: table-cell;
@@ -324,27 +374,34 @@ body{
     word-break: break-word;
     z-index: 1;
 }
+
 .DefinitionSide {
     position: relative;
     word-break: break-word;
 }
+
 .DefinitionSide-richTextEditor .RichTextEditor {
     flex-grow: 1;
 }
+
 .TermContent-contexts {
     *zoom: 1;
     position: relative;
 }
-.btn-delete-card{
+
+.btn-delete-card {
     border: none;
     background-color: rgba(225, 245, 250, 0.25);
 }
-.btn-delete-card i{
+
+.btn-delete-card i {
     color: #939bb4;
 }
+
 .TermRow.is-phantom {
     cursor: default;
 }
+
 .TermRow-bareSide--word {
     padding-right: 4.1875rem;
     width: 50%;
@@ -356,6 +413,7 @@ body{
     white-space: pre-wrap;
     word-break: break-word;
 }
+
 .TermRow-bareSide--definition {
     padding-left: 1.25rem;
     padding-right: 7.375rem;
@@ -368,6 +426,7 @@ body{
     white-space: pre-wrap;
     word-break: break-word;
 }
+
 .TermRow.is-phantom .TermContent-sideWrap {
     cursor: pointer;
 }
@@ -380,6 +439,7 @@ body{
     transition-property: background;
     width: 100%;
 }
+
 .TermRow.is-phantom .TermContent-side {
     height: 0;
     opacity: 0;
@@ -391,6 +451,7 @@ body{
     padding-right: 1.25rem;
     width: 50%;
 }
+
 .TermContent-side {
     cursor: text;
     display: table-cell;
@@ -406,6 +467,7 @@ body{
     padding-right: 0.75rem;
     width: 50%;
 }
+
 .TermContent-addRow {
     bottom: 0;
     height: 100%;
@@ -421,24 +483,28 @@ body{
 a {
     cursor: pointer;
 }
+
 a {
     text-decoration: none;
 }
+
 a, a:visited {
     color: #4257b2;
 }
+
 .TermContent-addRowButton {
     white-space: nowrap;
 }
 
-.TermContent-addRow>* {
+.TermContent-addRow > * {
     bottom: auto;
     left: 50%;
     position: absolute;
     right: auto;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
+
 .UILinkButton {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -458,10 +524,11 @@ a, a:visited {
     padding: 0 0 0.75rem;
     text-align: center;
     text-transform: uppercase;
-    transition: all .12s cubic-bezier(.47,0,.745,.715);
+    transition: all .12s cubic-bezier(.47, 0, .745, .715);
     vertical-align: middle;
     width: auto;
 }
+
 .UIButton--hero {
     font-size: 1.125rem;
     font-weight: 700;
@@ -474,6 +541,7 @@ a, a:visited {
     background-color: #63C5DE;
     color: white;
 }
+
 .UIButton-wrapper {
     align-items: center;
     display: inline-flex;
@@ -481,9 +549,11 @@ a, a:visited {
     white-space: pre-wrap;
     width: 100%;
 }
-.btn-create-term{
+
+.btn-create-term {
     border: none;
 }
+
 .ImportTerms.is-showing {
     -webkit-overflow-scrolling: touch;
     animation: slideDown .3s;
@@ -491,6 +561,7 @@ a, a:visited {
     position: fixed;
     transform: translateY(0);
 }
+
 .ImportTerms {
     background-color: white;
     bottom: 0;
@@ -503,10 +574,12 @@ a, a:visited {
     transition: transform .3s;
     z-index: 1100;
 }
+
 .ImportTerms-import {
     background-color: white;
     padding: 2.5rem 0 1.25rem;
 }
+
 .UIContainer {
     clear: both;
     margin-left: auto;
@@ -514,9 +587,11 @@ a, a:visited {
     max-width: 81.25em;
     padding: 0 2.5rem;
 }
+
 .ImportTerms-cancelImportButtonWrap {
     margin-bottom: 2rem;
 }
+
 .UILinkButton {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -536,21 +611,24 @@ a, a:visited {
     padding: 0 0 0.75rem;
     text-align: center;
     text-transform: uppercase;
-    transition: all .12s cubic-bezier(.47,0,.745,.715);
+    transition: all .12s cubic-bezier(.47, 0, .745, .715);
     vertical-align: middle;
     width: auto;
 }
+
 .ImportTerms-heading {
     font-size: 1rem;
     font-weight: 400;
     font-weight: 600;
     line-height: 1.625;
 }
+
 .ImportTerms-instructions {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.625;
 }
+
 .ImportTerms-textarea {
     background-color: initial;
     border: 0.125rem solid #000;
@@ -566,18 +644,22 @@ a, a:visited {
     transition: all .12s;
     width: 100%;
 }
+
 .ImportTerms-importButtonWrap {
     float: right;
     margin-top: 1.25rem;
 }
+
 .ImportTerms-formGroupWrap {
     margin-right: 7.5rem;
     margin-top: 1.25rem;
 }
+
 .ImportTerms-formGroup {
     display: inline-block;
     margin-right: 2rem;
 }
+
 .ImportTerms-formLabel {
     display: block;
     font-size: .875rem;
@@ -585,6 +667,7 @@ a, a:visited {
     line-height: 1.285714285714286;
     margin-bottom: 1.25rem;
 }
+
 .UIRadio {
     *zoom: 1;
     cursor: pointer;
@@ -592,6 +675,7 @@ a, a:visited {
     position: relative;
     width: 100%;
 }
+
 .UIRadio-input {
     bottom: 0;
     cursor: inherit;
@@ -603,9 +687,11 @@ a, a:visited {
     top: 0;
     width: 100%;
 }
-.UIRadio-input:checked~.UIRadio-fauxInput {
+
+.UIRadio-input:checked ~ .UIRadio-fauxInput {
     border-color: #ffcd1f;
 }
+
 .UIRadio-fauxInput {
     border: 0.125rem solid #939bb4;
     border-radius: 50%;
@@ -614,7 +700,7 @@ a, a:visited {
     height: 1.25rem;
     position: relative;
     transform: translateY(0.1875rem);
-    transition: all .12s cubic-bezier(.47,0,.745,.715);
+    transition: all .12s cubic-bezier(.47, 0, .745, .715);
     width: 1.25rem;
 }
 
@@ -624,8 +710,9 @@ a, a:visited {
     font-weight: 400;
     line-height: 1.625;
     margin-left: 1.875rem;
-    transition: all .12s cubic-bezier(.47,0,.745,.715);
+    transition: all .12s cubic-bezier(.47, 0, .745, .715);
 }
+
 .ImportTerms.is-showing .ImportTerms-preview {
     height: 48%;
 }
@@ -635,6 +722,7 @@ a, a:visited {
     overflow-y: scroll;
     padding-top: 1.25rem;
 }
+
 .UIHeading {
     margin-bottom: 0;
     margin-left: 0;
@@ -646,6 +734,7 @@ a, a:visited {
     font-weight: 700;
     line-height: 1.2;
 }
+
 .ImportTerms-previewRows {
     clear: both;
     margin-bottom: 6.25rem;
