--- a/template/assets/css/base.css
+++ b/template/assets/css/base.css
@@ -48,8 +48,7 @@ html{
 
 .modal__body{
     width: 600px;
-    height: 382px;
-    background: red;
+    /* height: 382px; */
     margin: 50px auto;
     position: relative;
     z-index: 2;
