--- a/template/assets/css/base.css
+++ b/template/assets/css/base.css
@@ -16,6 +16,7 @@
     --yellow-color-dark: #f1c606;
     --modal-cover-color: rgba(0,0,0,0.4);
     --orange-color: #EB8724;
+    --red-color-light: #EA7058;
 }
 
 *{
@@ -36,10 +37,12 @@ html{
     right: 0;
     bottom: 0;
     z-index: 2;
+    overflow-y: auto;
+    /* height: 100%; */
 }
 
 .modal__overlay{
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     background-color: var( --modal-cover-color);
@@ -51,8 +54,10 @@ html{
     /* height: 382px; */
     margin: 50px auto;
     position: relative;
-    z-index: 2;
+  
 }
+
+ 
 
 button:hover{
     cursor: pointer;
