--- a/template/term_details.html
+++ b/template/term_details.html
@@ -537,7 +537,8 @@
                 </div>
 
                 <div class="term__information-tool">
-                    <button class="term__information-tool-item term__information-tool-add">
+                    <button class="term__information-tool-item term__information-tool-add"
+                        id="add__term-to-folder-class-btn">
                         <i class="fas fa-plus"></i>
                     </button>
                     <a href="#" class="term__information-tool-item term__information-tool-edit">
@@ -574,14 +575,14 @@
                                 </a>
                             </li>
                             <li class="term__information-tool-menu-item">
-                                <a href="#" class="term__information-tool-menu-link">
+                                <a href="#" class="term__information-tool-menu-link" onclick="deleteTerm()">
                                     <i class="bi bi-trash"></i>
                                     <span class="term__information-tool-menu-text">
                                         Xóa
                                     </span>
                                 </a>
                             </li>
-                        </ul>
+                        </ul> 
                     </button>
 
 
@@ -621,38 +622,38 @@
             <div class="term__detail-list">
                 <div class="term__detail-item">
                     <div class="term__detail-item-word">
-                        Goodbye
+                        <input type="text" value="Goodbye" class="term__detail-item-input term__detail-item-word-text" readonly>
                     </div>
                     <div class="term__detail-item-definition">
-                        Tạm biệt
+                        <input type="text" value="Tạm biệt" class="term__detail-item-input" readonly>
                     </div>
                     <div class="term__detail-item-control">
                         <button class="term__detail-item-control-btn">
                             <i class="fas fa-star"></i>
                         </button>
-                        <button class="term__detail-item-control-btn">
+                        <button class="term__detail-item-control-btn" onclick="speechWord(this)">
                             <i class="fas fa-volume-up"></i>
                         </button>
-                        <button class="term__detail-item-control-btn">
+                        <button class="term__detail-item-control-btn" onclick="editWord(this)">
                             <i class="fas fa-pen"></i>
                         </button>
                     </div>
                 </div>
                 <div class="term__detail-item">
                     <div class="term__detail-item-word">
-                        Hello
+                        <input type="text" value="Hello" class="term__detail-item-input term__detail-item-word-text" readonly>
                     </div>
                     <div class="term__detail-item-definition">
-                        xin chào
+                        <input type="text" value="Xin chào" class="term__detail-item-input" readonly>
                     </div>
                     <div class="term__detail-item-control">
                         <button class="term__detail-item-control-btn">
                             <i class="fas fa-star"></i>
                         </button>
-                        <button class="term__detail-item-control-btn">
+                        <button class="term__detail-item-control-btn" onclick="speechWord(this)">
                             <i class="fas fa-volume-up"></i>
                         </button>
-                        <button class="term__detail-item-control-btn">
+                        <button class="term__detail-item-control-btn" onclick="editWord(this)">
                             <i class="fas fa-pen"></i>
                         </button>
                     </div>
@@ -665,12 +666,99 @@
         </div>
     </div>
 
+    <div class="add__term-to-folder-class" id="add__term-to-folder-class" style="display: none">
+        <div class="dialog__header">
+            <div class="dialog__header-title">
+                Thêm vào lớp học hoặc thư mục
+            </div>
+            <button class="dialog__header-close" id="add__term-to-folder-class-close-btn">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+
+        <div class="dialog__content-add-to-class-folder">
+
+            <div class="add__term-switch-btn">
+                <button class="add__term-switch-btn-item add__term-switch-btn-item--active"
+                    id="add__term-switch-btn-class">Thêm vào lớp
+                    học</button>
+                <button class="add__term-switch-btn-item" id="add__term-switch-btn-folder">Thêm vào thư mục</button>
+            </div>
+
+            <div class="add__term-to-class" id="add__term-to-class">
+                <button class="add__term-new-btn">
+                    <span class="add__term-new-btn-text">
+                        <i class="fas fa-plus"></i>
+                        TẠO MỘT LỚP MỚI
+                    </span>
+                </button>
+
+                <div class="add__term-to-list">
+                    <div class="add__term-to-list-item">
+                        <div class="add__term-to-list-item-title">
+                            Lớp học 1
+                        </div>
+                        <button class="add__term-to-list-item-btn add__term-to-list-item-btn-plus">
+                            <i class="fas fa-plus"></i>
+                        </button>
+                    </div>
+                    <div class="add__term-to-list-item">
+                        <div class="add__term-to-list-item-title">
+                            Lớp học 2
+                        </div>
+                        <button class="add__term-to-list-item-btn add__term-to-list-item-btn-plus">
+                            <i class="fas fa-plus"></i>
+                        </button>
+                    </div>
+                    <div class="add__term-to-list-item">
+                        <div class="add__term-to-list-item-title">
+                            Lớp học 2
+                        </div>
+                        <button class="add__term-to-list-item-btn add__term-to-list-item-btn-minus">
+                            <i class="fas fa-minus"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="add__term-to-folder" id="add__term-to-folder" style="display: none">
+                <button class="add__term-new-btn">
+
+                    <span class="add__term-new-btn-text">
+                        <i class="fas fa-plus"></i>
+                        TAO MỘT THƯ MỤC MỚI
+                    </span>
+                </button>
+
+                <div class="add__term-to-list">
+                    <div class="add__term-to-list-item">
+                        <div class="add__term-to-list-item-title">
+                            Folder 2
+                        </div>
+                        <button class="add__term-to-list-item-btn add__term-to-list-item-btn-plus">
+                            <i class="fas fa-plus"></i>
+                        </button>
+                    </div>
+                    <div class="add__term-to-list-item">
+                        <div class="add__term-to-list-item-title">
+                            Folder 1
+                        </div>
+                        <button class="add__term-to-list-item-btn add__term-to-list-item-btn-minus">
+                            <i class="fas fa-minus"></i>
+                        </button>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="share__dialog" id="share__dialog" style="display: none;">
-        <div class="share__dialog-header">
-            <div class="share__dialog-header-title">
+        <div class="dialog__header">
+            <div class="dialog__header-title">
                 Chia sẻ học phần
             </div>
-            <button class="share__dialog-header-close" id="share__dialog-close-btn">
+            <button class="dialog__header-close" id="share__dialog-close-btn">
                 <i class="fas fa-times"></i>
             </button>
         </div>
@@ -725,7 +813,37 @@
     </div>
 
     <div class="information__dialog" id="information__dialog" style="display: none;">
+    </div>
 
+    <div class="confirm__delete-term" id="confirm__delete-term" style="display: none">
+        <div class="dialog__header">
+            <div class="dialog__header-title">
+                Xóa học phần này
+            </div>
+            <button class="dialog__header-close" onclick="closeDeleteDialog()">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <div class="confirm__delete-term-content">
+            <div class="confirm__delete-term-name">
+                Tên học phần
+            </div>
+            <div class="confirm__delete-term-description">
+                Bạn sắp xoá học phần này và toàn bộ dữ liệu trong đó. Không ai có thể truy cập vào học phần này nữa.
+            </div>
+            <div class="confirm__delete-term-question">
+                Bạn có chắc chắn không? Bạn sẽ không được hoàn tác.
+            </div>
+            <div class="confirm__delete-term-btn">
+                <button class="confirm__delete-term-btn-cancel" onclick="closeDeleteDialog()">
+                    Hủy bỏ
+                </button>
+                <button class="confirm__delete-term-btn-confirm">
+                    Xóa học phần
+                </button>
+            </div>
+
+        </div>
     </div>
 
     <div class="modal" id="modal" style="display: none">
@@ -735,12 +853,9 @@
 
         <div class="modal__body">
             <div class="modal__inner" id="modal__inner">
-               
 
-                
             </div>
         </div>
-
     </div>
 
     <script src="./assets/js/header.js"></script>
