--- a/template/assets/css/remember_card.css
+++ b/template/assets/css/remember_card.css
@@ -112,6 +112,20 @@ body{
     font-weight: 500;
 }
 
+.control__main-action:hover{
+    color: var(--yellow-color-dark);
+}
+
+.control__main-action--active{
+    background-color: var(--yellow-color-dark);
+    border: none;
+    color: var(--text-color);
+
+}
+.control__main-action--active:hover{
+    color: var(--text-color);
+}
+
 .control__main-action-text {}
 
 .layout__content {
@@ -220,6 +234,96 @@ body{
     letter-spacing: 1.1px;
     margin-right: 4px;
 }
+
+.card__item-special{
+    background-color:transparent;
+    height:515px;
+    padding: 48px 24px;    
+}
+
+.card__item-special-title{
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.card__item-special-title-text{
+    font-size: 2.3rem;
+}
+
+.card__item-special-content{
+    background-color: var(--white-color);
+    border-radius: 5px;
+    box-shadow: 0px 0px 14px -6px #b1b1b1;
+    padding: 24px;
+    width: 586px;
+    margin: 0 auto;
+}
+
+.card__item-special-content-item{
+    display: flex;
+    height: 44px;
+    margin-top: 40px;
+}
+
+.card__item-special-icon{
+
+}
+
+.card__item-special-icon i{
+    font-size: 2rem;
+    margin-right: 20px;
+}
+
+.card__item-special-icon--green{
+    color: var(--green-color);
+}
+
+.card__item-special-icon--blue{ 
+    color: var(--blue-color-dark);
+}
+
+.card__item-special-description{
+}
+
+.card__item-special-description-title{
+    margin: 0;
+    font-size: 1.6rem;
+    margin-bottom: 7px;
+
+}
+
+.card__item-special-description-text{
+    margin: 0;
+    font-size: 1.3rem;
+}
+
+.card__item-special-btn{
+    display: flex;
+    justify-content: center;
+}
+
+.card__item-special-btn-item{
+    margin: 20px 10px 0 10px;
+    height: 34px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding: 0 15px;
+    border-radius: 3px;
+}
+
+.card__item-special-btn a{
+    color:var(--white-color);
+    background-color: var(--blue-color)
+}
+
+.card__item-special-btn button{
+    background-color: transparent;
+    border: 1px solid var(--border-gray-color);
+}
+
 
 .card__toolbar {
     display: flex;
